--- a/translations/sentinels.tex/ru.po
+++ b/translations/sentinels.tex/ru.po
@@ -83,7 +83,7 @@ msgid ""
 "}\n"
 "\n"
 msgstr ""
-"\\textit{Мир за пределами нашего, полон тварей и чудовищ, едва сдерживаемый комплексом четырех священных Обелисков.\n"
+"\\textit{Мир за пределами нашего полон тварей и чудовищ, едва сдерживаемый четырьмя священными Обелисками.\n"
 "  Но сила этих камней убывает, и прорыв неминуем.\n"
 "  Когда это случится, только вы и ваш союзник встанете между ордами и полным опустошением этих земель.\n"
 "}\n"
@@ -100,7 +100,7 @@ msgid ""
 "\\subsection*{\\MakeUppercase{Scenario Length}}\n"
 "\n"
 msgstr ""
-"\\subsection*{\\MakeUppercase{Продолжительность сценария}}\n"
+"\\subsection*{\\MakeUppercase{Длительность сценария}}\n"
 "\n"
 
 #. type: multicols
@@ -157,7 +157,7 @@ msgid ""
 "\\textbf{Starting Income:} 10 \\svg{gold}, 2 \\svg{building_materials}, 1 \\svg{valuables}\n"
 "\n"
 msgstr ""
-"\\textbf{Стартовый Доход:} 10 \\svg{gold}, 2 \\svg{building_materials}, 1 \\svg{valuables}\n"
+"\\textbf{Стартовый доход:} 10 \\svg{gold}, 2 \\svg{building_materials}, 1 \\svg{valuables}\n"
 "\n"
 
 #. type: multicols*
@@ -171,10 +171,10 @@ msgid ""
 "\\end{itemize}\n"
 "\n"
 msgstr ""
-"\\textbf{Jednostki Początkowe:}\n"
+"\\textbf{Стартовые юниты:}\n"
 "\\begin{itemize}\n"
-"  \\item «pack» \\svg{bronze} Юнитов с \\textit{najniższym} Стоимостью Найма\n"
-"  \\item «few» \\svg{bronze} Юнитов с \\textit{najwyższym} Стоимостью Найма\n"
+"  \\item «pack» \\svg{bronze} юнитов с \\textit{наименьшей} стоимостью найма\n"
+"  \\item «few» \\svg{bronze} юнитов с \\textit{наибольшей} стоимостью найма\n"
 "\\end{itemize}\n"
 "\n"
 
@@ -185,7 +185,7 @@ msgid ""
 "\\textbf{Town Buildings:} \\bronze\\ Dwelling, Citadel\n"
 "\n"
 msgstr ""
-"\\textbf{Городские Постройки:} \\bronze\\ Жилища, Цитадель\n"
+"\\textbf{Городские постройки:} \\bronze\\ Жилища, Цитадель\n"
 "\n"
 
 #. type: multicols
@@ -195,7 +195,7 @@ msgid ""
 "\\textbf{Map Tile Pool:} Each player takes 1 random Near (IV--V) Map Tile and 1 random Far (II--III) Map Tile. These Tiles should not contain any Obelisks.\n"
 "\n"
 msgstr ""
-"\\textbf{Набор Элементов Карты:} Каждый игрок берет 1 случайный Ближний (IV--V) Элемент Карты и 1 Дальний (II--III) Элемент Карты. Эти плитки не должны содержать Обелисков.\n"
+"\\textbf{Набор элементов Карты:} Каждый игрок берет 1 случайный ближний (IV--V) элемент карты и 1 дальний (II--III) элемент карты. Эти элементы не должны содержать Обелисков.\n"
 "\n"
 
 #. type: multicols
@@ -205,7 +205,7 @@ msgid ""
 "\\textbf{Additional Bonus:} Search (2) the Artifact Deck\n"
 "\n"
 msgstr ""
-"\\textbf{Дополнительный Бонус:} Поиск (2) в колоде артефактов\n"
+"\\textbf{Дополнительный бонус:} Поиск (2) в колоде артефактов\n"
 "\n"
 
 #. type: multicols*
@@ -243,7 +243,7 @@ msgid ""
 "Take the following Map Tiles and arrange them as shown in the Scenario map layout:\n"
 "\n"
 msgstr ""
-"Возьмите следующие Элементы Карты и расположите их как показано на схеме Карты Сценария:\n"
+"Возьмите следующие элементы карты и расположите по схеме карты сценария:\n"
 "\n"
 
 #. type: multicols
@@ -258,9 +258,9 @@ msgid ""
 "\n"
 msgstr ""
 "\\begin{itemize}\n"
-"  \\item 2 × Стартовый (I) Элемент Карты\n"
-"  \\item 4 × Далёкий  (II--III) Элемент Карты\n"
-"  \\item 4 × Ближний (IV--V) Элемент Карты с Полем Обелиска\n"
+"  \\item 2 × Стартовый (I) элемент карты\n"
+"  \\item 4 × Дальний  (II--III) элемент карты\n"
+"  \\item 4 × Ближний (IV--V) элемент карты с полем Обелиска\n"
 "\\end{itemize}\n"
 "\n"
 
@@ -352,9 +352,9 @@ msgid ""
 "\\end{itemize}\n"
 "\n"
 msgstr ""
-"\\textbf{Runda 6.:}\n"
+"\\textbf{Раунд 6:}\n"
 "\\begin{itemize}\n"
-"  \\item Уберите все Чёрные Кубики с каждой Мельницы, Водяной Мельницы, Мистического Сада на карте.\n"
+"  \\item Уберите все чёрные кубики с каждой Мельницы, Водяной Мельницы, Мистического Сада на карте.\n"
 "  \\item Разместите вражескую армию в соответствии с правилами ниже.\n"
 "\\end{itemize}\n"
 "\n"
@@ -369,7 +369,7 @@ msgid ""
 "\\end{itemize}\n"
 "\n"
 msgstr ""
-"\\textbf{Раунды 7. и 8.:}\n"
+"\\textbf{Раунды 7 и 8:}\n"
 "\\begin{itemize}\n"
 "  \\item Разместите вражескую армию в соответствии с правилами ниже.\n"
 "\\end{itemize}\n"
@@ -385,7 +385,7 @@ msgid ""
 "\\end{itemize}\n"
 "\n"
 msgstr ""
-"\\textbf{Раунд 9.:}\n"
+"\\textbf{Раунд 9:}\n"
 "\\begin{itemize}\n"
 "  \\item Повторите события Раунда 6.\n"
 "\\end{itemize}\n"
@@ -401,7 +401,7 @@ msgid ""
 "\\end{itemize}\n"
 "\n"
 msgstr ""
-"\\textbf{Раунд 10.:}\n"
+"\\textbf{Раунд 10:}\n"
 "\\begin{itemize}\n"
 "  \\item Разместите вражескую армию в соответствии с правилами ниже.\n"
 "\\end{itemize}\n"
@@ -442,13 +442,13 @@ msgid ""
 msgstr ""
 "\\begin{itemize}\n"
 "  \\item  Игнорируйте жёлтые границы на стартовых Элементах.\n"
-"  \\item Игроки могут торговать ресурсами, когда Герой активного игрока посещает Торговый Пост или находится на Поле рядом с союзным Героем.\n"
+"  \\item Торговля ресурсами доступна когда активный Герой посещает Торговый Пост или на поле рядом с союзным Героем.\n"
 "  \\item Герой, победивший вражескую армию, получает 2 \\svg{experience}.\n"
-"    Победивший игрок бросает два Кубика Сокровищ и выбирает один результат.\n"
+"    Игрок бросает два кубика сокровищ и выбирает один результат.\n"
 "  \\item Кроме того, игроки не могут:\n"
 "  \\begin{itemize}\n"
 "      \\item Атаковать других Героев.\n"
-"      \\item Захватывать Шахту или Поселок под флагом противника.\n"
+"      \\item Захватывать Шахту или Посёлок под флагом противника.\n"
 "  \\end{itemize}\n"
 "\\end{itemize}\n"
 "\n"
@@ -460,7 +460,7 @@ msgid ""
 "\\subsection*{\\MakeUppercase{Enemy Spawning\\\\and Movement}}\n"
 "\n"
 msgstr ""
-"\\subsection*{\\MakeUppercase{Вражеское расположение\\\\и движение}}\n"
+"\\subsection*{\\MakeUppercase{Появление и движение\\\\врагов}}\n"
 "\n"
 
 #. type: multicols
@@ -479,8 +479,8 @@ msgid ""
 "\n"
 msgstr ""
 "\\begin{itemize}\n"
-"  \\item Вражеские армии появляются на случайном Поле с Обелиском (используйте миниатюры Героев из фракций, не участвующих в игре).\n"
-"  \\item Определите поле Обелиска, бросив 2 Кубика Атаки. Применяйте результаты следующим образом (К1/К2), перебрасывайте 0:\n"
+"  \\item Вражеские армии появляются на случайном поле с Обелиском (используйте миниатюры Героев из фракций, не участвующих в игре).\n"
+"  \\item Определите поле Обелиска, бросив 2 кубика атаки. Применяйте результаты как (К1/К2), перебрасывайте 0:\n"
 "  \\begin{itemize}[leftmargin=15pt]\n"
 "    \\item $+1$/$+1$ = Север\n"
 "    \\item $+1$/$-1$ = Восток\n"
@@ -499,10 +499,10 @@ msgid ""
 "  \\item If there is a Hero on the Field where the enemy spawns, a fight starts immediately.\n"
 "\n"
 msgstr ""
-"  \\item ля более сбалансированного распределения, в Раундах 7 и 9 бросайте только второй Кубик Атаки (К2). Для К1 используйте противоположный результату из предыдущего Раунда.\n"
-"  Раунды 8. и 10. полностью случайны.\n"
-"  \\item Если Элемент, где должен появиться враг, ещё не открыт, переверните его и расположите по своему усмотрению.\n"
-"  \\item Если на Поле, где появляется враг, находится Герой, битва начинается немедленно.\n"
+"  \\item Для сбалансированного появления врагов в раундах 7 и 9 бросайте только второй кубик атаки (К2). Для К1 используйте противоположный результату из предыдущего раунда.\n"
+"  Раунды 8 и 10 случайны.\n"
+"  \\item Если элемент, где должен появиться враг, ещё не открыт, переверните его и расположите по своему усмотрению.\n"
+"  \\item Если на поле, где появляется враг, находится Герой, битва начинается немедленно.\n"
 "\n"
 
 #. type: multicols
@@ -517,10 +517,10 @@ msgid ""
 "\\end{itemize}\n"
 "\n"
 msgstr ""
-"  \\item Вражеские армии имеют 3 \\svg{movement} за Раунд.\n"
-"  \\item Вражеские армии двигаются в конце каждого Раунда, начиная с Раунда их расположения.\n"
+"  \\item Вражеские армии имеют 3 \\svg{movement} за раунд.\n"
+"  \\item Вражеские армии двигаются в конце каждого раунда, начиная с раунда их появления.\n"
 "  \\item Вражеские армии двигаются по правилам из Книги Правил (стр. 33), но вместо захвата уничтожают всё на своём пути.\n"
-"    Размещайте Чёрные Кубики на каждом Поле, через которое они прошли, считая эти Поля пустыми с этого момента.\n"
+"    Размещайте чёрные кубики на каждом поле, через которое они прошли, считая эти поля пустыми с этого момента.\n"
 "  \\item Если движение врага может идти в разных направлениях, игроки решают, куда он направится.\n"
 "\\end{itemize}\n"
 "\n"
@@ -549,11 +549,11 @@ msgid ""
 "\n"
 msgstr ""
 "\\begin{itemize}\n"
-"  \\item Сражение с вражескими армиями длительностью более одного Раунда Боя не тратит \\svg{movement}.\n"
-"  \\item Во время сражения с вражеской армией Герой может отступить, когда должен Активироваться любой его Юнит.\n"
-"    Отступающий Главный Герой теряет все оставшиеся ОП и возвращается в выбранный им союзный Город или Посёлок, сохраняя все оставшиеся Юниты.\n"
-"  \\item Отступающие Второстепенные Герои удаляются из игры, но их оставшиеся Юниты сохраняются.\n"
-"  \\item Уничтоженные вражеские Юниты не возрождаются..\n"
+"  \\item Сражение с вражескими армиями длительностью более одного раунда боя не тратит \\svg{movement}.\n"
+"  \\item Во время сражения с вражеской армией Герой может отступить, когда должен Активироваться любой его юнит.\n"
+"    Отступающий Главный Герой теряет все оставшиеся ОП и возвращается в выбранный им союзный Город или Посёлок, сохраняя все оставшиеся юниты.\n"
+"  \\item Отступающие Второстепенные Герои удаляются из игры, но их оставшиеся юниты сохраняются.\n"
+"  \\item Уничтоженные вражеские юниты не возрождаются..\n"
 "\\end{itemize}\n"
 "\n"
 
@@ -580,10 +580,10 @@ msgid ""
 "\n"
 msgstr ""
 "\\begin{itemize}\n"
-"  \\item  В 10 Раунде появляется Армия Босса. Она отличается от предыдущих армий тем, что усиливается из фиксированного пула Нейтральных Юнитов (пул усиления = число в скобках в таблице ниже).\n"
-"  \\item В начале 2 Раунда Боя и каждого последующего раунда, 2 Юнита усиливают оставшуюся армию из перемешанного пула усиления (до максимум 5 Юнитов), чтобы продолжить бой до отступления игрока или уничтожения всех Нейтральных Юнитов из пула усиления. \textit{Если количество вражеских Юнитов в начале раунда равно 1 или меньше, возьмите до 4 Юнитов (т.е. после усиления на поле всегда остаётся 4 или 5 вражеских Юнитов, если они доступны).}\n"
-"  \\item Разместите усиливающие Юниты на вражеской задней линии, начиная слева с самой низкой Инициативы (сначала Юниты \\svg{unit_ranged}). При необходимости продолжите на следующей линии в том же порядке.\n"
-"  \\item Когда игрок отступает, вражеская армия берёт минимум 4 Юнита и использует их как стартовые Юниты в следующем сражении.\n"
+"  \\item  В 10 раунде появляется Армия Босса. Она отличается от предыдущих армий тем, что усиливается из фиксированного пула Нейтральных юнитов (пул усиления = число в скобках в таблице ниже).\n"
+"  \\item В начале 2 раунда боя и каждого последующего раунда, 2 юнита усиливают оставшуюся армию из перемешанного пула усиления (до максимум 5 юнитов), чтобы продолжить бой до отступления игрока или уничтожения всех Нейтральных юнитов из пула усиления. \textit{Если количество вражеских Юнитов в начале раунда равно 1 или меньше, возьмите до 4 Юнитов (т.е. после усиления на поле всегда остаётся 4 или 5 вражеских Юнитов, если они доступны).}\n"
+"  \\item Разместите усиливающие юниты на вражеской задней линии, начиная слева с самой низкой инициативы (сначала юниты \\svg{unit_ranged}). При необходимости продолжите на следующей линии в том же порядке.\n"
+"  \\item Когда игрок отступает, вражеская армия берёт минимум 4 юнита и использует их как стартовые юниты в следующем сражении.\n"
 "\\end{itemize}\n"
 "\n"
 
@@ -660,20 +660,20 @@ msgstr ""
 "{\\origbronze[12]} \\renewcommand{\\silver}{\\origsilver[12]} "
 "\\renewcommand{\\golden}{\\origgolden[12]} \\renewcommand{\\azure}"
 "{\\origazure[12]} \\begin{tabularx}{0.95\\linewidth}{p{0.15\\linewidth}XXXX} "
-"& \\darkcell{Rundy 6 + 7} & \\darkcell{Rundy 8 + 9} & \\darkcell{Runda 10}\\"
-"\\ \\darkcell[1.4]{Łatwy} & \\lightcell[1.4]{\\bronze \\silver \\silver "
+"& \\darkcell{Раунд 6 + 7} & \\darkcell{Раунд 8 + 9} & \\darkcell{Раунд 10}\\"
+"\\ \\darkcell[1.4]{Лёгкий} & \\lightcell[1.4]{\\bronze \\silver \\silver "
 "\\silver \\golden} & \\lightcell[1.4]{\\silver \\silver \\silver \\golden "
 "\\golden} & \\lightcell[1.4]{\\silver \\silver \\golden \\azure "
 "\\footref{azure} \\linebreak (2\\bronze, 4\\silver, 3\\golden, 1\\azure)}\\"
-"\\ \\darkcell[1.4]{Normalny} & \\lightcell[1.4]{\\silver \\silver \\silver "
+"\\ \\darkcell[1.4]{Нормальный} & \\lightcell[1.4]{\\silver \\silver \\silver "
 "\\golden \\golden} & \\lightcell[1.4]{\\silver \\silver \\silver \\golden "
 "\\azure} & \\lightcell[1.4]{\\golden \\golden \\golden \\azure "
 "\\footref{azure} \\linebreak (2\\silver, 7\\golden, 1\\azure)}\\\\ "
-"\\darkcell[1.4]{Trudny} & \\lightcell[1.4]{\\silver \\silver \\golden "
+"\\darkcell[1.4]{Сложный} & \\lightcell[1.4]{\\silver \\silver \\golden "
 "\\golden \\golden} & \\lightcell[1.4]{\\silver \\silver \\golden \\golden "
 "\\azure} & \\lightcell[1.4]{\\golden \\golden \\azure \\azure "
 "\\footref{azure} \\linebreak (2\\silver, 6\\golden, 2\\azure)}\\\\ "
-"\\darkcell[1.4]{Niemożliwy} & \\lightcell[1.4]{\\silver \\golden \\golden "
+"\\darkcell[1.4]{Невозможный} & \\lightcell[1.4]{\\silver \\golden \\golden "
 "\\golden \\golden} & \\lightcell[1.4]{\\golden \\golden \\golden \\golden "
 "\\azure} & \\lightcell[1.4]{\\golden \\azure \\azure \\azure "
 "\\footref{azure} \\linebreak (7\\golden, 3\\azure)}\\\\ \\end{tabularx} }"
